# csidh

./: CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md
.github/: dependabot.yml
.github/workflows/: rust.yml
benches/: callgrind.rs  public_key.rs  public_key_time.rs  shared_secret.rs  shared_secret_time.rs
src/: csidh.rs  csidh_params.rs  elliptic_curve.rs  lib.rs  limbs.rs  montgomery_curve.rs  montgomery_point.rs  private_key.rs  public_key.rs  shared_secret.rs
src/csidh_params/: csidh_1024.rs  csidh_1792.rs  csidh_512.rs
