[package]
name = "csidh"
version = "0.3.0"
authors = ["Titouan Real <titouan.real@gmail.com>"]
edition = "2021"
rust-version = "1.78"
description = """Pure Rust implementation of the CSIDH cryptographic algorithm for secret key
exchange. Provides a no_std-friendly implementation. Not constant-time yet."""
repository = "https://github.com/TitouanReal/csidh"
license = "Apache-2.0 OR MIT"
keywords = ["crypto", "elliptic-curve", "isogeny", "csidh", "quantum"]
categories = ["cryptography", "no-std"]

[dependencies]
crypto-bigint = { version = "0.6.0-pre.12", default-features = false }
# TODO Use rand_chacha
oorandom = "11"

[dev-dependencies]
criterion = "0.5"
rand = "0.8"

[[bench]]
name = "public_key"
harness = false

[[bench]]
name = "shared_secret"
harness = false
