[package]
name = "csidh"
version = "0.4.0"
authors = ["Titouan Real <titouan.real@gmail.com>"]
edition = "2021"
rust-version = "1.78"
description = """Pure Rust implementation of the CSIDH cryptographic algorithm for secret key
exchange. Provides a no_std-friendly implementation. Not constant-time yet."""
documentation = "https://docs.rs/csidh"
repository = "https://github.com/TitouanReal/csidh"
license = "Apache-2.0 OR MIT"
keywords = ["crypto", "elliptic-curve", "isogeny", "csidh", "quantum"]
categories = ["cryptography", "no-std"]

[dependencies.crypto-bigint]
version = "=0.6.0-rc.2"
default-features = false
features = ["rand_core"]

[dev-dependencies]
criterion = "0.5"
iai-callgrind = "0.13"
rand = "0.8"

[[bench]]
name = "callgrind"
harness = false

[[bench]]
name = "public_key_time"
harness = false

[[bench]]
name = "shared_secret_time"
harness = false
